# insurance-online

./: README.md  pyproject.toml
notebooks/: benchmark_online.py
src/insurance_online/: __init__.py  ab_test.py  bandits.py  simulation.py
tests/: test_bandits.py
