[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-online"
version = "0.1.0"
description = "Bandit pricing algorithms for insurance conversion optimisation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_online"]
